# StudentVue-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: client.rs  enums.rs  error.rs  lib.rs  request.rs  xml.rs
src/model/: attendance.rs  grade.rs  mod.rs  schedule.rs  school.rs  student.rs
