[package]
name = "studentvue-rs"
version = "0.1.0"
authors = ["13laze <angelx602@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.11", features = ["full"] }
quick-xml = "0.17.2"
serde = "1.0.104"
reqwest = "0.10.1"
