[package]
name = "studentvue"
version = "0.1.0"
authors = ["13laze"]
edition = "2018"
license = "MIT"
description = "StudentVue Rust API"
readme = "README.md"
documentation = "https://docs.rs/studentvue"
repository = "https://github.com/13laze/StudentVue-rs/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.11", features = ["full"] }
quick-xml = { version = "0.17.2", features = ["serialize"] }
serde = { version = "1.0.104", features = [ "derive" ] }
reqwest = "0.10.1"
lazy_static = "1.4.0"
